# serums

./: .buildinfo  .gitignore  CITATION.cff  LICENSE  README.md  README.rst  References.html  api.html  cicd.html  config.yaml  do_release.py  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py  sitemap.xml  toolchain.html  tox.ini  usage.html
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: References.doctree  api.doctree  cicd.doctree  environment.pickle  index.doctree  license.doctree  toolchain.doctree  usage.doctree
.doctrees/_autosummary/: serums.doctree
.github/workflows/: build_upload_package.yml  ci-cd.yml  release.yml
_autosummary/: serums.html
_autosummary/serums/: serums.distances.html  serums.distribution_estimator.html  serums.distribution_overbounder.html  serums.enums.html  serums.error_processor.html  serums.errors.html  serums.models.html
_modules/: index.html
_modules/serums/: distances.html  distribution_estimator.html  distribution_overbounder.html  enums.html  error_processor.html  errors.html  models.html
_sources/: api.rst.txt
_sources/_autosummary/: serums.rst.txt
docs/source/: api.rst  conf.py  example_runner.py  index.rst  refs.bib  robots.txt  toolchain.rst  usage.rst
reports/coverage/: class_index.html  (+20 more)
serums/: __init__.py  distances.py  distribution_estimator.py  distribution_overbounder.py  enums.py  error_processor.py  errors.py  models.py  overbound_estimator.py
test/: conftest.py  test_distribution_estimator.py
(+141 files in other folders)
